# project_stack

./: .gitignore  readme.md
autolabor_description/launch/: display_autolabor_hokuyo.launch
autolabor_description/urdf/: autolabor_hokuyo.urdf
autolabor_pro1_driver/launch/: driver_hokuyo.launch
autolabor_pro1_driver/yaml/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  nav_obstacles_params.yaml
autolabor_teleop/: CMakeLists.txt  package.xml
autolabor_teleop/bag/: frames.gv
autolabor_teleop/launch/: autolabor_gmapping.launch  frames.gv  (+5 more)
ccd_camera/: CMakeLists.txt  package.xml
coord_move_base/: CMakeLists.txt  package.xml  readme.md
coord_target_planner/: CMakeLists.txt  ctp_plugin.xml  package.xml  readme.md
move_base_lane/: CMakeLists.txt  package.xml
nav_goal_lh/: CMakeLists.txt  package.xml  readme.md
nav_goal_lh/include/: control.h
nav_goal_lh/msg/: GPSFix.msg  current_gps.msg  position.msg
nav_goal_lh/scripts/: current_gps_node.py  current_yaw_node.py  nav_goal_node.py
nav_goal_lh/src/: control.cpp  ekf.cpp  ekf.hpp  fusion.cpp  fusion.hpp  getgps.cpp  getgps.h  gps_transform.h  main.cpp  new.cpp  noise_kalman.h  pid.cpp  pid.h  utils.cpp
neurobot_bringup/: CMakeLists.txt  package.xml  readme.md
neurobot_data_proprocess/: CMakeLists.txt  package.xml
neurobot_description/: CMakeLists.txt  package.xml
obstacle_avoidance/: CMakeLists.txt  package.xml  readme.md
robot_pose_ekf/: CMakeLists.txt  package.xml
rolling_window/: CMakeLists.txt  package.xml  readme.md
(+129 files in other folders)
